[gd_scene load_steps=17 format=3 uid="uid://bqqgyqafm7xwp"]

[ext_resource type="Environment" uid="uid://bqnqgflivjvue" path="res://scenes/main-environment.tres" id="1_ahusb"]
[ext_resource type="PackedScene" uid="uid://dl2ed4gkybggf" path="res://objects/player.tscn" id="2_onms2"]
[ext_resource type="Script" path="res://scripts/view.gd" id="5_bg0fr"]
[ext_resource type="Texture2D" uid="uid://cx8lcorkfu7ti" path="res://sprites/texture_01.png" id="5_o7dvy"]
[ext_resource type="PackedScene" uid="uid://440rqsqg6bur" path="res://objects/boss.tscn" id="6_clu5s"]
[ext_resource type="PackedScene" uid="uid://coebog4yvxamu" path="res://objects/swappable_object.tscn" id="9_enp3u"]
[ext_resource type="Script" path="res://scripts/replay_hud.gd" id="10_m5xe4"]
[ext_resource type="FontFile" uid="uid://d0cxd77jybrcn" path="res://fonts/lilita_one_regular.ttf" id="10_p5k18"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="10_wxsm4"]
[ext_resource type="PackedScene" uid="uid://dy017k58p20sk" path="res://objects/cloud.tscn" id="13_drtpy"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3rtad"]
radius = 0.1
height = 0.2

[sub_resource type="BoxMesh" id="BoxMesh_yohtx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_882bd"]
albedo_texture = ExtResource("5_o7dvy")
uv1_scale = Vector3(50, 50, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_kvofp"]

[sub_resource type="LabelSettings" id="LabelSettings_yrr27"]
font = ExtResource("10_p5k18")
font_size = 30
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_u3yxo"]
font = ExtResource("10_p5k18")
font_size = 20

[node name="Main" type="Node3D"]

[node name="Environment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_ahusb")

[node name="Player" parent="." node_paths=PackedStringArray("view") instance=ExtResource("2_onms2")]
transform = Transform3D(-0.000733197, 0, -1, 0, 1, 0, 1, 0, -0.000733197, 0, 0.5, 1)
view = NodePath("../View")
movement_speed = 300
sword_damage = 100

[node name="Marker" type="MeshInstance3D" parent="." groups=["decor"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.893314, 0.583551, 0)
visible = false
mesh = SubResource("CapsuleMesh_3rtad")

[node name="View" type="Node3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(0.707107, 0, 0.707106, 0, 1, 0, -0.707107, 0, 0.707106, 0, 0, 0)
script = ExtResource("5_bg0fr")
target = NodePath("../Player")
distance = 11
height = 14
freeze_time = 0.3

[node name="Camera" type="Camera3D" parent="View"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.93346, 4.04577)
current = true
fov = 50.0

[node name="StudioListener3D" type="StudioListener3D" parent="View/Camera"]

[node name="CameraFreezeTimer" type="Timer" parent="View/Camera"]
one_shot = true

[node name="World" type="Node3D" parent="."]

[node name="cube8" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5495, 12.5517, -2.666)

[node name="cube9" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.27593, -0.401864, 0.422933, 0.471408, 1.30937, -0.178025, -0.343721, 0.304009, 1.32582, 3.33538, 12.8158, -4.1932)

[node name="cube10" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.32811, 0.370441, 0.259369, -0.293866, 1.3186, -0.37854, -0.34372, 0.30401, 1.32582, -10.5752, 13.4825, -7.93707)

[node name="cube11" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(0.476646, 0.924607, 0.941422, -0.929853, 0.945559, -0.457882, -0.93624, -0.468385, 0.934042, -11.1815, 13.4825, 9.2812)

[node name="cube12" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(-1.02876, -0.695523, 0.652886, -0.929853, 0.945557, -0.457881, -0.213027, -0.768461, -1.15432, -10.9158, 14.2394, 11.515)

[node name="cube13" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.56209, -1.37982, 1.71508, 1.97375, 1.80907, -0.342241, -0.974547, 1.4522, 2.05595, -14.3045, 13.4825, -8.24191)

[node name="cube14" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.56209, -1.37982, 1.71508, 1.97375, 1.80907, -0.342241, -0.974547, 1.4522, 2.05595, -15.866, 13.4825, 7.83702)

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.422618, -0.694272, 0.582563, 0, 0.642788, 0.766044, -0.906308, 0.323744, -0.271654, 0, 0, 0)
shadow_enabled = true
shadow_opacity = 0.75

[node name="Ground" type="Node3D" parent="."]
transform = Transform3D(100, 0, 0, 0, 1, 0, 0, 0, 100, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_yohtx")
surface_material_override/0 = SubResource("StandardMaterial3D_882bd")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground/MeshInstance3D" groups=["decor"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/MeshInstance3D/StaticBody3D"]
shape = SubResource("BoxShape3D_kvofp")

[node name="Boss" parent="." node_paths=PackedStringArray("target") instance=ExtResource("6_clu5s")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.5, -4.70524)
movement_speed = 3
MELEE_RANGE = 2
target = NodePath("../Player")
JUMPING_RANGE = 5

[node name="SwapObject" type="Node3D" parent="."]

[node name="swappable_object2" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.4389, 0.498065, 0)
player = NodePath("../../Player")

[node name="swappable_object" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.509874, 10.0378)
player = NodePath("../../Player")

[node name="swappable_object3" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.520863, -19.7149)
player = NodePath("../../Player")

[node name="swappable_object4" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.0021, 0.520863, -19.7149)
player = NodePath("../../Player")

[node name="swappable_object5" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.520863, 2.03134)
player = NodePath("../../Player")

[node name="swappable_object6" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.6833, 0.520863, -19.7149)
player = NodePath("../../Player")

[node name="swappable_object7" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.66515, 0.520863, -5.02327)
player = NodePath("../../Player")

[node name="swappable_object8" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.71531, 0.520863, -14.9947)
player = NodePath("../../Player")

[node name="swappable_object9" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6289, 0.520863, -10.4402)
player = NodePath("../../Player")

[node name="swappable_object10" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.32472, 0.520863, 6.60032)
player = NodePath("../../Player")

[node name="swappable_object11" parent="SwapObject" node_paths=PackedStringArray("player") instance=ExtResource("9_enp3u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.70286, 0.520863, 5.72477)
player = NodePath("../../Player")

[node name="GameHud" type="CanvasLayer" parent="."]
script = ExtResource("10_wxsm4")

[node name="BossLife" type="Control" parent="GameHud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameHud/BossLife"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="BossNameLabel" type="Label" parent="GameHud/BossLife/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Amagemnon Lord of Desolation"
label_settings = SubResource("LabelSettings_yrr27")

[node name="LifeBar" type="ProgressBar" parent="GameHud/BossLife/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="Player" type="Control" parent="GameHud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameHud/Player"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
alignment = 1

[node name="LifeBarLabel" type="Label" parent="GameHud/Player/HBoxContainer"]
layout_mode = 2
text = " P"
label_settings = SubResource("LabelSettings_yrr27")

[node name="LifeBar" type="ProgressBar" parent="GameHud/Player/HBoxContainer"]
custom_minimum_size = Vector2(200, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 100.0
show_percentage = false

[node name="SwapLabel" type="Label" parent="GameHud/Player"]
modulate = Color(1, 1, 0.0941176, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.5
offset_top = -27.0
offset_right = 52.5
grow_horizontal = 2
grow_vertical = 0
text = "Swap Ready"
label_settings = SubResource("LabelSettings_u3yxo")

[node name="Label" type="Label" parent="GameHud"]
anchors_preset = -1
anchor_bottom = 0.069
offset_left = 16.0
offset_top = 164.0
offset_right = 125.0
offset_bottom = 156.32
text = "BOSS STATE : "

[node name="BossState" type="Label" parent="GameHud"]
anchors_preset = -1
anchor_bottom = 0.069
offset_left = 125.0
offset_top = 165.0
offset_right = 186.0
offset_bottom = 141.32
text = "CHASE"

[node name="ReplayHud" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("10_m5xe4")

[node name="VBoxContainer" type="VBoxContainer" parent="ReplayHud"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.5
offset_top = -25.0
offset_right = 6.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReplayLabel" type="Label" parent="ReplayHud/VBoxContainer"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("10_p5k18")
theme_override_font_sizes/font_size = 80
text = "GAME OVER"

[node name="ReplayButton" type="Button" parent="ReplayHud/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("10_p5k18")
theme_override_font_sizes/font_size = 30
text = "Replay"

[connection signal="hp_changed" from="Player" to="GameHud" method="_on_player_hp_changed"]
[connection signal="spell_changed" from="Player" to="GameHud" method="_on_player_spell_changed"]
[connection signal="swap_positon" from="Player" to="View" method="_on_player_swap_positon"]
[connection signal="timeout" from="View/Camera/CameraFreezeTimer" to="View" method="_on_camera_freeze_timer_timeout"]
[connection signal="hp_changed" from="Boss" to="GameHud" method="_on_boss_hp_changed"]
[connection signal="state_changed" from="Boss" to="GameHud" method="_on_boss_state_changed"]
[connection signal="button_down" from="ReplayHud/VBoxContainer/ReplayButton" to="ReplayHud" method="_on_replay_button_button_down"]
